apps/network-system/envoy-gateway/config/internal/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  annotations:
    external-dns.alpha.kubernetes.io/target: &loadbalancerIP 192.168.1.200
spec:
  gatewayClassName: envoy-internal

  infrastructure:
    annotations:
      metallb.io/loadBalancerIPs: *loadbalancerIP

  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces: { from: Same }
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        certificateRefs:
          - kind: Secret
            name: internal-tls
      allowedRoutes:
        namespaces: { from: All }
